Fixed links in comments not showing up as links

--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -33,3 +33,16 @@ a.commentAuthor:hover {
     visibility: hidden;
     display: none;
 }
+
+.commentBodyText {
+    text-decoration: none;
+    color: silver;
+}
+
+.commentBodyText a {
+    color: silver;
+}
+
+.commentBodyText a:hover {
+    text-decoration: underline;
+}
